--- a/askme_makarov/templates/components/comment-item.html
+++ b/askme_makarov/templates/components/comment-item.html
@@ -11,15 +11,19 @@
         </div>
         <div class="g-4 d-flex">
             <div class="col-2">
-                <i class="fas fa-arrow-down fa-lg"></i>
                 {% if comment.get_likes_count > 0 %}
+                    <i class="fas fa-arrow-down fa-lg"></i>
                     <span class="text-success mx-1">{{ comment.get_likes_count }}</span>
+                    <i class="fas fa-arrow-up fa-lg text-success"></i>
                 {% elif comment.get_likes_count < 0 %}
+                    <i class="fas fa-arrow-down fa-lg text-danger"></i>
                     <span class="text-danger mx-1">{{ comment.get_likes_count }}</span>
+                    <i class="fas fa-arrow-up fa-lg"></i>
                     {% else %}
+                    <i class="fas fa-arrow-down fa-lg"></i>
                     <span class="mx-1">{{ comment.get_likes_count }}</span>
+                    <i class="fas fa-arrow-up fa-lg "></i>
                 {% endif %}
-                <i class="fas fa-arrow-up fa-lg "></i>
             </div>
             <div class="col-10">
                 <div class="form-check">
