--- a/askme_makarov/templates/question.html
+++ b/askme_makarov/templates/question.html
@@ -19,19 +19,23 @@
             </div>
             <div class="g-4 d-flex">
                 <div class="col-3">
-                    <i class="fas fa-arrow-down fa-lg"></i>
                     {% if question.get_likes_count > 0 %}
+                        <i class="fas fa-arrow-down fa-lg"></i>
                         <span class="text-success mx-1">{{ question.get_likes_count }}</span>
+                        <i class="fas fa-arrow-up fa-lg text-success"></i>
                     {% elif question.get_likes_count < 0 %}
+                        <i class="fas fa-arrow-down fa-lg text-danger"></i>
                         <span class="text-danger mx-1">{{ question.get_likes_count }}</span>
-                        {% else %}
+                        <i class="fas fa-arrow-up fa-lg"></i>
+                    {% else %}
+                        <i class="fas fa-arrow-down fa-lg"></i>
                         <span class="mx-1">{{ question.get_likes_count }}</span>
+                        <i class="fas fa-arrow-up fa-lg "></i>
                     {% endif %}
-                    <i class="fas fa-arrow-up fa-lg "></i>
                 </div>
                  <div class="col-7 fs-5 program-lang">
                 Tags: {% for tag in question.tags.all %}
-                    <a class="badge bg-primary" id="tag-{{forloop.counter}}" href="{% url 'tag' tag_name=tag.name %}">{{tag.name}}</a>
+                    <a class="badge bg-dark item" id="tag-{{forloop.counter}}" href="{% url 'tag' tag_name=tag.name %}">{{tag.name}}</a>
                 {% endfor %}
                 </div>
             </div>
