--- a/askme_makarov/templates/ask.html
+++ b/askme_makarov/templates/ask.html
@@ -1,27 +1,22 @@
 {% extends 'layouts/base.html' %}
+{% load django_bootstrap5 %}
 {% load static %}
 
 {% block auth %}
-    {% include 'components/auth_on_nav.html' %}
+    {% if user.is_authenticated %}
+        {% include 'components/auth_on_nav.html' %}
+    {% else %}
+        {% include 'components/signup_on_nav.html' %}
+    {% endif %}
 {% endblock auth %}
 
 {% block content %}
 <div class="col-8">
     <h2> New Question</h2>
     <div class="row">
-        <form class="mt-2 d-flex flex-column gap-4">
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="title-addon">Title</span>
-                <input type="text" class="form-control" id="title" placeholder="Enter title" required>
-            </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="text-addon">Text</span>
-                <textarea class="form-control" id="text" rows="6" placeholder="Enter text" required></textarea>
-            </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="tags-addon">Tags</span>
-                <input type="text" class="form-control" id="tags" placeholder="Enter tags" required>
-            </div>
+        <form class="mt-2 d-flex flex-column gap-4" method="POST">
+            {% csrf_token %}
+            {% bootstrap_form ask_form %}
             <button type="submit" class="btn btn-primary col-2 g-3" >Ask</button>
         </form>
     </div>
