--- a/askme_makarov/templates/components/auth_on_nav.html
+++ b/askme_makarov/templates/components/auth_on_nav.html
@@ -2,8 +2,8 @@
 <div class='d-flex flex-row align-items-center gap-3'>
     <img class="avatar" src="{% static '/img/css_ava.svg' %} "/>
     <div>
-        <p class="mb-2">Nikita</p>
+        <p class="mb-2">{{ user.username }}</p>
         <a href="{%  url 'settings' %}">Settings</a>
-        <a href="{%  url 'index' %}">Log out</a>
+        <a href="{%  url 'logout' %}">Log out</a>
     </div>
 </div>
