--- a/askme_makarov/templates/components/question-item.html
+++ b/askme_makarov/templates/components/question-item.html
@@ -18,9 +18,9 @@
                 {% if question.get_likes_count > 0 %}
                     <i class="fas fa-arrow-down fa-lg"></i>
                     <span class="text-success mx-1">{{ question.get_likes_count }}</span>
-                    <i class="fas fa-arrow-up fa-lg text-success"></i>
+                    <i class="fas fa-arrow-up fa-lg"></i>
                 {% elif question.get_likes_count < 0 %}
-                    <i class="fas fa-arrow-down fa-lg text-danger"></i>
+                    <i class="fas fa-arrow-down fa-lg"></i>
                     <span class="text-danger mx-1">{{ question.get_likes_count }}</span>
                     <i class="fas fa-arrow-up fa-lg"></i>
                     {% else %}
