--- a/askme_makarov/templates/question.html
+++ b/askme_makarov/templates/question.html
@@ -1,7 +1,12 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
+{% load django_bootstrap5 %}
 {% block auth %}
-    {% include 'components/auth_on_nav.html' %}
+    {% if user.is_authenticated %}
+        {% include 'components/auth_on_nav.html' %}
+    {% else %}
+        {% include 'components/signup_on_nav.html' %}
+    {% endif %}
 {% endblock auth %}
 
 {% block content %}
@@ -22,9 +27,9 @@
                     {% if question.get_likes_count > 0 %}
                         <i class="fas fa-arrow-down fa-lg"></i>
                         <span class="text-success mx-1">{{ question.get_likes_count }}</span>
-                        <i class="fas fa-arrow-up fa-lg text-success"></i>
+                        <i class="fas fa-arrow-up fa-lg"></i>
                     {% elif question.get_likes_count < 0 %}
-                        <i class="fas fa-arrow-down fa-lg text-danger"></i>
+                        <i class="fas fa-arrow-down fa-lg"></i>
                         <span class="text-danger mx-1">{{ question.get_likes_count }}</span>
                         <i class="fas fa-arrow-up fa-lg"></i>
                     {% else %}
@@ -48,8 +53,9 @@
     <hr class="bg-dark border-2 border-top border-dark g-3" />
 </div>
 {% include 'components/paginator.html' %}
-    <form>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Enter your answer here" required></textarea>
+    <form method="post">
+        {% csrf_token %}
+        {% bootstrap_form comment_form %}
         <button type="submit" class="btn btn-primary col-2 g-3 mt-3" >Answer</button>
     </form>
 {% endblock %}
