add jquery hints

--- a/askme_makarov/templates/ask.html
+++ b/askme_makarov/templates/ask.html
@@ -11,6 +11,9 @@
 {% endblock auth %}
 
 {% block content %}
+{#<link rel="stylesheet" type="text/css" href="{% static 'css/jquery-ui.css'%}">#}
+{#<script src="{% static 'js/jquery.js' %}"></script>#}
+{#<script src="{% static 'js/jquery-ui.js' %}"></script>#}
 <div class="col-8">
     <h2> New Question</h2>
     <div class="row">
@@ -21,5 +24,45 @@
         </form>
     </div>
 </div>
+    <script>
+  $( function() {
+    var availableTags = {{ all_tags|safe }};
+    function split( val ) {
+      return val.split( /,\s*/ );
+    }
+    function extractLast( term ) {
+      return split( term ).pop();
+    }
 
+    $( "#id_tags" )
+      .on( "keydown", function( event ) {
+        if ( event.keyCode === $.ui.keyCode.TAB &&
+            $( this ).autocomplete( "instance" ).menu.active ) {
+          event.preventDefault();
+        }
+      })
+      .autocomplete({
+        minLength: 0,
+        source: function( request, response ) {
+          var term = extractLast(request.term);
+          var matchingTags = $.ui.autocomplete.filter(availableTags, term);
+          var slicedTags = matchingTags.slice(0, 10);
+          response(slicedTags);
+        },
+        focus: function() {
+          return false;
+        },
+        select: function( event, ui ) {
+          var terms = split( this.value );
+          terms.pop();
+          terms.push( ui.item.value );
+          terms.push( "" );
+          this.value = terms.join( ", " );
+          return false;
+        }
+      });
+  });
+</script>
 {% endblock %}
+
+
