--- a/askme_makarov/templates/layouts/base.html
+++ b/askme_makarov/templates/layouts/base.html
@@ -5,8 +5,11 @@
 <head>
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %} "/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/jquery-ui.css'%}">
     <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
+    <script src="{% static 'js/jquery.js' %}"></script>
+    <script src="{% static 'js/jquery-ui.js' %}"></script>
     <meta name="theme-color" content="#7952b3">
 
 
@@ -77,8 +80,6 @@
         <span class="text-muted">Place sticky footer content here.</span>
     </div>
 </footer>
-
-
-<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-</body>
+        <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    </body>
 </html>
